--- a/Controle_Estoque/mainwindow.ui
+++ b/Controle_Estoque/mainwindow.ui
@@ -46,6 +46,19 @@
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QLabel" name="fun_nome">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>280</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
