--- a/Controle_Estoque/estoque.ui
+++ b/Controle_Estoque/estoque.ui
@@ -241,7 +241,7 @@
       </property>
      </widget>
     </widget>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -335,13 +335,13 @@
       </item>
      </layout>
     </widget>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>366</x>
        <y>21</y>
        <width>141</width>
-       <height>71</height>
+       <height>72</height>
       </rect>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_13">
